--- a/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/strings.xml
+++ b/trunk/EasiCab/SourceCode/EasiCab/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-   <!-- Common-->
+    <!-- Common-->
     <string name="Submit">Submit</string>
+    <string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 
-   <!-- SelectRole-->
+
+    <!-- SelectRole-->
     <string name="Role_One">Admin</string>
     <string name="Role_two">Cab Driver</string>
     <string name="Role_three">Employee</string>
